changed file structure and fixed player spawing to be behind the objects